Ajout validations et méthodes pour les afficher (avec logger)

--- a/crue10/data/templates/dptg.xml
+++ b/crue10/data/templates/dptg.xml
@@ -5,7 +5,7 @@
     {%- for profil_casier in profil_casier_list %}
     <ProfilCasier Nom="{{ profil_casier.id }}">
       <Commentaire>{{ profil_casier.comment|html_escape }}</Commentaire>
-      <Longueur>{{ profil_casier.distance }}</Longueur>
+      <Longueur>{{ profil_casier.longueur }}</Longueur>
       <EvolutionFF>
         {%- for xt, z in profil_casier.xz %}
         <PointFF>{{ xt }} {{ z }}</PointFF>
