--- a/crue10/data/templates/dclm.xml
+++ b/crue10/data/templates/dclm.xml
@@ -5,26 +5,28 @@
   {%- if isinstance(calcul, CalcPseudoPerm) %}
   <CalcPseudoPerm Nom="{{ calcul.id }}">
     <Commentaire>{{ calcul.comment }}</Commentaire>
-    {%- for nom_emh, clim_tag, is_active, value, sens in calcul.values %}
+    {%- for nom_emh, clim_tag, is_active, value, sens, typ_loi, nom_fic in calcul.values %}
     <{{ clim_tag }} NomRef="{{ nom_emh }}">
       <IsActive>{% if is_active %}true{% else %}false{% endif %}</IsActive>
       {%- if sens is not none %}
       <SensOuv>{{ sens }}</SensOuv>
       {%- endif %}
-      <{{ clim_tag|typeclim2str_calcpseudoperm }}>{{ value }}</{{ clim_tag|typeclim2str_calcpseudoperm }}>
+      <{{ typ_loi }}>{{ value }}</{{ typ_loi }}>
     </{{ clim_tag }}>
     {%- endfor %}
   </CalcPseudoPerm>
   {%- elif isinstance(calcul, CalcTrans) %}
   <CalcTrans Nom="{{ calcul.id }}">
     <Commentaire>{{ calcul.comment }}</Commentaire>
-    {%- for nom_emh, clim_tag, is_active, value, sens in calcul.values %}
+    {%- for nom_emh, clim_tag, is_active, value, sens, typ_loi, nom_fic in calcul.values %}
     <{{ clim_tag }} NomRef="{{ nom_emh }}">
       <IsActive>{% if is_active %}true{% else %}false{% endif %}</IsActive>
       {%- if sens is not none %}
       <SensOuv>{{ sens }}</SensOuv>
       {%- endif %}
-      <{{ clim_tag|typeclim2str_calctrans }} NomRef="{{ value }}"/>
+      {%- if value is not none %}
+      <{{ typ_loi }} NomRef="{{ value }}"{% if nom_fic is not none %} NomFic="{{ nom_fic }}"{% endif %}/>
+      {%- endif %}
     </{{ clim_tag }}>
     {%- endfor %}
   </CalcTrans>
