--- a/crue10/data/templates/etu.xml
+++ b/crue10/data/templates/etu.xml
@@ -55,11 +55,14 @@
         <OPTI NomRef="{{ modele.file_basenames.opti }}"/>
         <PNUM NomRef="{{ modele.file_basenames.pnum }}"/>
         <DPTI NomRef="{{ modele.file_basenames.dpti }}"/>
+        {%- if has_regul %}
+        <DREG NomRef="{{ modele.file_basenames.dreg }}"/>
+        {%- endif %}
       </Modele-FichEtudes>
       <Modele-SousModeles>
-		{%- for sous_modele in modele.liste_sous_modeles %}
+        {%- for sous_modele in modele.liste_sous_modeles %}
         <Modele-SousModele NomRef="{{ sous_modele.id }}"/>
-		{%- endfor %}
+        {%- endfor %}
       </Modele-SousModeles>
     </Modele>
 	{%- endfor %}
