--- a/crue10/data/1.2/templates/ocal.xml
+++ b/crue10/data/1.2/templates/ocal.xml
@@ -3,16 +3,16 @@
   <Commentaire>{{ comment|html_escape }}</Commentaire>
   <Sorties>
     <Avancement>
-      <SortieFichier>true</SortieFichier>
+      <SortieFichier>{{ sorties.avancement.SortieFichier|lower }}</SortieFichier>
     </Avancement>
     <Trace>
-      <SortieEcran>true</SortieEcran>
-      <SortieFichier>true</SortieFichier>
-      <VerbositeEcran>INFO</VerbositeEcran>
-      <VerbositeFichier>INFO</VerbositeFichier>
+      <SortieEcran>{{ sorties.trace.SortieEcran|lower }}</SortieEcran>
+      <SortieFichier>{{ sorties.trace.SortieFichier|lower }}</SortieFichier>
+      <VerbositeEcran>{{ sorties.trace.VerbositeEcran }}</VerbositeEcran>
+      <VerbositeFichier>{{ sorties.trace.VerbositeFichier }}</VerbositeFichier>
     </Trace>
     <Resultat>
-      <SortieFichier>true</SortieFichier>
+      <SortieFichier>{{ sorties.resultat.SortieFichier|lower }}</SortieFichier>
     </Resultat>
   </Sorties>
   {%- for ord_calc in liste_ord_calc_pseudoperm %}
