--- a/crue10/data/1.3/templates/ocal.xml
+++ b/crue10/data/1.3/templates/ocal.xml
@@ -3,16 +3,16 @@
   <Commentaire>{{ comment|html_escape }}</Commentaire>
   <Sorties>
     <Avancement>
-      <SortieFichier>{{ sorties.avancement.SortieFichier }}</SortieFichier>
+      <SortieFichier>{{ sorties.avancement.SortieFichier|lower }}</SortieFichier>
     </Avancement>
     <Trace>
-      <SortieEcran>{{ sorties.trace.SortieEcran }}</SortieEcran>
-      <SortieFichier>{{ sorties.trace.SortieFichier }}</SortieFichier>
+      <SortieEcran>{{ sorties.trace.SortieEcran|lower }}</SortieEcran>
+      <SortieFichier>{{ sorties.trace.SortieFichier|lower }}</SortieFichier>
       <VerbositeEcran>{{ sorties.trace.VerbositeEcran }}</VerbositeEcran>
       <VerbositeFichier>{{ sorties.trace.VerbositeFichier }}</VerbositeFichier>
     </Trace>
     <Resultat>
-      <SortieFichier>{{ sorties.resultat.SortieFichier }}</SortieFichier>
+      <SortieFichier>{{ sorties.resultat.SortieFichier|lower }}</SortieFichier>
     </Resultat>
   </Sorties>
   {%- for ord_calc in liste_ord_calc_pseudoperm %}
