--- a/crue10/data/1.3/templates/dptg.xml
+++ b/crue10/data/1.3/templates/dptg.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <DPTG xmlns="http://www.fudaa.fr/xsd/crue" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.fudaa.fr/xsd/crue http://www.fudaa.fr/xsd/crue/dptg-1.3.xsd">
   <Commentaire>{{ comment|html_escape }}</Commentaire>
+  {%- if profil_casier_list %}
   <DonPrtGeoProfilCasiers>
     {%- for profil_casier in profil_casier_list %}
     <ProfilCasier Nom="{{ profil_casier.id }}">
@@ -18,6 +19,10 @@
     </ProfilCasier>
     {%- endfor %}
   </DonPrtGeoProfilCasiers>
+  {%- else %}
+  <DonPrtGeoProfilCasiers/>
+  {%- endif %}
+  {%- if section_profil_list %}
   <DonPrtGeoProfilSections>
     {%- for section in section_profil_list %}
     <ProfilSection Nom="{{ section.nom_profilsection }}">
@@ -55,7 +60,11 @@
     </ProfilSection>
     {%- endfor %}
   </DonPrtGeoProfilSections>
+  {%- else %}
+  <DonPrtGeoProfilSections/>
+  {%- endif %}
   <DonPrtGeoCasiers/>
+  {%- if section_idem_list %}
   <DonPrtGeoSections>
     {%- for section in section_idem_list %}
     <DonPrtGeoSectionIdem NomRef="{{ section.id }}">
@@ -63,6 +72,10 @@
     </DonPrtGeoSectionIdem>
     {%- endfor %}
   </DonPrtGeoSections>
+  {%- else %}
+  <DonPrtGeoSections/>
+  {%- endif %}
+  {%- if branche_saintvenant_list %}
   <DonPrtGeoBranches>
     {%- for branche in branche_saintvenant_list %}
     <DonPrtGeoBrancheSaintVenant NomRef="{{ branche.id }}">
@@ -70,4 +83,7 @@
     </DonPrtGeoBrancheSaintVenant>
     {%- endfor %}
   </DonPrtGeoBranches>
+  {%- else %}
+  <DonPrtGeoBranches/>
+  {%- endif %}
 </DPTG>
