--- a/crue10/data/1.3/templates/dpti.xml
+++ b/crue10/data/1.3/templates/dpti.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <DPTI xmlns="http://www.fudaa.fr/xsd/crue" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.fudaa.fr/xsd/crue http://www.fudaa.fr/xsd/crue/dpti-1.3.xsd">
   <Commentaire>{{ comment|html_escape }}</Commentaire>
+  {%- if noeuds_ci %}
   <DonPrtCIniNoeuds>
     {%- for noeud_id, z_ini in noeuds_ci.items() %}
     <DonPrtCIniNoeudNiveauContinu NomRef="{{ noeud_id }}">
@@ -8,6 +9,10 @@
     </DonPrtCIniNoeudNiveauContinu>
     {%- endfor %}
   </DonPrtCIniNoeuds>
+  {%- else %}
+  <DonPrtCIniNoeuds/>
+  {%- endif %}
+  {%- if casiers_ci %}
   <DonPrtCIniCasiers>
     {%- for casier_id, q_ruis in casiers_ci.items() %}
     <DonPrtCIniCasierProfil NomRef="{{ casier_id }}">
@@ -15,7 +20,11 @@
     </DonPrtCIniCasierProfil>
     {%- endfor %}
   </DonPrtCIniCasiers>
+  {%- else %}
+  <DonPrtCIniCasiers/>
+  {%- endif %}
   <DonPrtCIniSections/>
+  {%- if branches_ci %}
   <DonPrtCIniBranches>
     {%- for branche_id, ci in branches_ci.items() %}
     {%- set values = ci['values'] -%}
@@ -37,4 +46,7 @@
     {%- endif %}
     {%- endfor %}
   </DonPrtCIniBranches>
+  {%- else %}
+  <DonPrtCIniBranches/>
+  {%- endif %}
 </DPTI>
