Corrections OTFA (référence/cible)

--- a/crue10/data/1.2/templates/otfa.xml
+++ b/crue10/data/1.2/templates/otfa.xml
@@ -7,27 +7,27 @@
   <DateDerniereModif>{{ metadata.DateDerniereModif }}</DateDerniereModif>
   <Reference-Options>
     <EffacerRunAvant>true</EffacerRunAvant>
-    <EffacerRunApres>true</EffacerRunApres>
+    <EffacerRunApres>false</EffacerRunApres>
   </Reference-Options>
   <Cible-Options>
     <EffacerRunAvant>true</EffacerRunAvant>
-    <EffacerRunApres>true</EffacerRunApres>
+    <EffacerRunApres>false</EffacerRunApres>
   </Cible-Options>
   <LignesCampagne>
     {%- for campagne in campagnes %}
     <LigneCampagne Numero="{{ loop.index0 + 1 }}">
-      <Commentaire></Commentaire>
+      <Commentaire>{{ campagne.commentaire }}</Commentaire>
       <LancerComparaison>true</LancerComparaison>
       <Reference>
-        <Etude>{{ campagne.chemin_etude }}</Etude>
-        <Scenario>{{ campagne.nom_scenario }}</Scenario>
+        <Etude>{{ campagne.chemin_etude_ref }}</Etude>
+        <Scenario>{{ campagne.nom_scenario_ref }}</Scenario>
         <Coeur>old_c10m10</Coeur>
         <LancerCalcul>true</LancerCalcul>
         <Transitoire>false</Transitoire>
       </Reference>
       <Cible>
-        <Etude></Etude>
-        <Scenario></Scenario>
+        <Etude>{{ campagne.chemin_etude_cible }}</Etude>
+        <Scenario>{{ campagne.nom_scenario_cible }}</Scenario>
         <Coeur>c10m10</Coeur>
         <LancerCalcul>true</LancerCalcul>
         <Transitoire>false</Transitoire>
