Ajout changer_grammaire_TUI et corrections

--- a/crue10/data/1.2/templates/dptg.xml
+++ b/crue10/data/1.2/templates/dptg.xml
@@ -50,6 +50,7 @@
         </LitNumerote>
         {%- endfor %}
       </LitNumerotes>
+      {%- if section.get_liste_limites_geom() %}
       <Etiquettes>
         {%- for limite in section.get_liste_limites_geom() %}
         <Etiquette Nom="{{ limite.id }}">
@@ -57,6 +58,7 @@
         </Etiquette>
         {%- endfor %}
       </Etiquettes>
+      {%- endif %}
     </ProfilSection>
     {%- endfor %}
   </DonPrtGeoProfilSections>
