Améliorations pour éviter fausse normalisation sur Fudaa-Crue-1.4.3
Si on enregistre l'étude Etu_from_scratch avec Fudaa-Crue-1.4.3, il y a des modifications mineures dans les dptg (ordre des ProfilCasier et Commentaire associé)

--- a/crue10/data/1.2/templates/dptg.xml
+++ b/crue10/data/1.2/templates/dptg.xml
@@ -6,7 +6,7 @@
     {%- for profil_casier in profil_casier_list %}
     <ProfilCasier Nom="{{ profil_casier.id }}">
       <Commentaire>{{ profil_casier.comment|html_escape }}</Commentaire>
-      <Longueur>{{ profil_casier.longueur }}</Longueur>
+      <Longueur>{{ profil_casier.longueur|float2str }}</Longueur>
       <EvolutionFF>
         {%- for xt, z in profil_casier.xz %}
         <PointFF>{{ xt }} {{ z }}</PointFF>
